# CMakeExecutableTemplate

./: CMakeLists.txt  README.md
src/: main.cpp
subdirectory/Application/: CMakeLists.txt
subdirectory/Application/include/: Application.hpp
